[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hevy-cli"
version = "1.0.0"
description = "A CLI toolkit for interacting with the Hevy workout app API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joshua Caine" }
]
keywords = ["hevy", "workout", "fitness", "api", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
hevy = "hevy.cli.main:main"
hevy-fetch = "hevy.cli.fetch_templates:main"
hevy-create = "hevy.cli.create_routine:main"

[project.urls]
Homepage = "https://github.com/joshualukecaine/hevy"
Repository = "https://github.com/joshualukecaine/hevy"

[tool.hatch.build.targets.wheel]
packages = ["src/hevy"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["hevy"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=hevy --cov-report=term-missing"

[tool.coverage.run]
source = ["src/hevy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
